# invenio-faculty-profiles

./: .gitignore  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  run-tests.sh
.github/workflows/: pypi-publish.yml  tests.yml
.tx/: config
docs/: api.rst  conf.py  index.rst  usage.rst
invenio_faculty_profiles/: __init__.py  config.py  errors.py  ext.py  proxies.py  searchapp.py  webpack.py
invenio_faculty_profiles/alembic/: __init__.py  ae3a6b3833a6_setup_of_faculty_profiles.py  fb0de62682b0_create_faculty_profiles_table.py
invenio_faculty_profiles/assets/semantic-ui/js/invenio_faculty_profiles/: FacultyProfileCardGroup.js  frontpage.js  index.js  search.js
invenio_faculty_profiles/assets/semantic-ui/js/invenio_faculty_profiles/api/: FacultyProfileApi.js  index.js  serializers.js
invenio_faculty_profiles/assets/semantic-ui/js/invenio_faculty_profiles/facultyProfilesItems/: FacultyProfileCompactItem.js  FacultyProfileCompactItemComputer.js  FacultyProfileCompactItemMobile.js  FacultyProfileItem.js  FacultyProfileItemComputer.js  FacultyProfileItemMobile.js
invenio_faculty_profiles/assets/semantic-ui/js/invenio_faculty_profiles/form/: ActionBox.js  CvUploader.js  DangerZone.js  DeleteFacultyProfileModal.js  Identifiers.js  PhotoUploader.js  index.js  initialValues.js
invenio_faculty_profiles/assets/semantic-ui/js/invenio_faculty_profiles/searchComponents/: FacultyProfilesEmptySearchResults.js  FacultyProfilesResults.js  FacultyProfilesSearchBarElement.js  FacultyProfilesSearchLayout.js  ResultsGridItemTemplate.js  index.js
invenio_faculty_profiles/assets/semantic-ui/js/invenio_faculty_profiles/settings/profile/: CvUploader.js  DangerZone.js  DeleteButton.js  DeleteFacultyProfileModal.js  FacultyProfileProfileForm.js  PhotoUploader.js  index.js
invenio_faculty_profiles/assets/semantic-ui/translations/invenio_faculty_profiles/: package-lock.json  package.json
invenio_faculty_profiles/assets/semantic-ui/translations/invenio_faculty_profiles/messages/ca/: translations.json
invenio_faculty_profiles/assets/semantic-ui/translations/invenio_faculty_profiles/messages/en/: translations.json
invenio_faculty_profiles/records/: api.py  models.py
invenio_faculty_profiles/records/jsonschemas/: __init__.py
invenio_faculty_profiles/records/jsonschemas/faculty_profiles/: definitions-v1.0.0.json  faculty-profiles-v1.0.0.json
invenio_faculty_profiles/records/mappings/: __init__.py
invenio_faculty_profiles/records/mappings/os-v2/: __init__.py
invenio_faculty_profiles/records/mappings/os-v2/facultyprofiles/: facultyprofile-v1.0.0.json
invenio_faculty_profiles/records/mappings/v7/: __init__.py
invenio_faculty_profiles/resources/: __init__.py  config.py  parser.py  resource.py  serializer.py  ui_schema.py
invenio_faculty_profiles/services/: __init__.py  config.py  facets.py  links.py  permissions.py  schema.py  service.py
invenio_faculty_profiles/templates/semantic-ui/invenio_faculty_profiles/: detail.html  edit.html  frontpage.html  new.html  search.html
invenio_faculty_profiles/templates/semantic-ui/invenio_faculty_profiles/details/: base.html  detail.html  header.html
invenio_faculty_profiles/templates/semantic-ui/invenio_faculty_profiles/details/settings/: base.html  profile.html
invenio_faculty_profiles/views/: __init__.py  api.py  decorators.py  faculty_profiles.py  ui.py
tests/: conftest.py  test_api.py  test_resource.py  test_service.py
